ENHANCE: Refactor field injection